deployment-crud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudphp
  labels:
    app: crudphp
    tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: crudphp
            tier: frontend
    template:
        metadata:
            labels:
                app: crudphp
                tier: frontend
        spec:
            containers:
                - name: crudphp
                  image: jmdpsysadmin/crudphp:5
                  ports:
                    - containerPort: 80
                      name: crudphp
