service-crud.yaml
apiVersion: v1
kind: Service
metadata:
  name: crudphp
  labels:
    app: crudphp
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: crudphp
  selector:
    app: crudphp
    tier: frontend
