ingress-crud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crudphp
spec:
  rules:
    - host: www.jmdp-crud.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crudphp
                port:
                  number: 80
